XY8 analysis update

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -77,13 +77,13 @@
    "source": [
     "os.chdir(r\"D:\\Kseniia\\Optics Lab\\Sample 19 (SPV)\\LiF\\400 G\\Rabi\")\n",
     "# Rabi\n",
-    "filename = r\"20220920-1218-09_Sample 19_LiF_NV11_Rabi_384G_pulsed_measurement.dat\"\n",
+    "filename = r\"20220912-1645-06_Sample 19_LiF_NV1_Rabi_384G_pulsed_measurement.dat\"\n",
     "Rabi_time, Rabi_signal = qa.qudi_reader(filename , 2)\n",
     "\n",
     "\n",
-    "os.chdir(r\"D:\\Kseniia\\Optics Lab\\Sample 19 (SPV)\\LiF\\400 G\\XY8\")\n",
+    "os.chdir(r\"D:\\Kseniia\\Optics Lab\\Sample 19 (SPV)\\LiF\\400 G\\XY8-4\")\n",
     "# XY8-N; Region of interest\n",
-    "filename=r\"20220921-1722-04_Sample 19_LiF_NV11_XY8_500_384G_pulsed_measurement.dat\"\n",
+    "filename=r\"20220913-2252-19_Sample 19_LiF_NV1_XY8_500_384G_pulsed_measurement.dat\"\n",
     "XY8_roi_time, XY8_roi_signal, XY8_roi_signal_alt, XY8_roi_delta = qa.qudi_reader(filename, 3)\n",
     "\n",
     "# # XY8-N; full\n",
@@ -122,17 +122,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sample_name = 'Sample 19 LiF NV11 7Li (2)'\n",
+    "Sample_name = 'Sample 19 LiF NV1 7Li (2)'\n",
     "\n",
     "# Number of XY8 blocks\n",
     "N = 4\n",
     "\n",
     "# Number of resonances\n",
-    "nor = 2 # 1 or 2\n",
+    "nor = 1 # 1 or 2\n",
     "\n",
     "# Magnetic field (use values from the qudi ODMR fitting)\n",
-    "ODMR_left = 1796 * 1e6    #Hz\n",
-    "ODMR_right = 3950.49 * 1e6    #Hz\n",
+    "ODMR_left = 1794.3 * 1e6    #Hz\n",
+    "ODMR_right = 3949.4 * 1e6    #Hz\n",
     "B_ext = (ODMR_right - ODMR_left) / (2 * qa.gamma_NV)    #G\n",
     "# B_ext = 490.52   # G\n",
     "\n",
@@ -145,12 +145,12 @@
     "# Select isotopes \n",
     "gamma = qa.gamma_7Li    # Hz/G\n",
     "gamma_name = '7Li'\n",
-    "if nor == 2: # Isotope with lower gyromagnetic ratio\n",
+    "if nor == 2: # Second isotope\n",
     "    gamma2 = qa.gamma_7Li    # Hz/G\n",
     "    gamma2_name = '7Li'\n",
-    "else:\n",
-    "    gamma2 = gamma\n",
-    "    gamma2_name = gamma_name"
+    "# else:\n",
+    "#     gamma2 = gamma\n",
+    "#     gamma2_name = gamma_name"
    ]
   },
   {
@@ -168,10 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Second isotope will be with lower gyromagnetic ratio\n",
     "if nor == 2: \n",
+    "    if gamma2 > gamma:\n",
+    "        gamma, gamma2 = gamma2, gamma\n",
+    "        gamma_name, gamma2_name = gamma2_name, gamma_name\n",
     "    tau, Larm_freq, tau2, Larm_freq2 = qa.Estimation(nor, B_ext, gamma, gamma2, gamma_name, gamma2_name)\n",
     "else:\n",
-    "    tau, Larm_freq = qa.Estimation(nor, B_ext, gamma, gamma2, gamma_name, gamma2_name)"
+    "    tau, Larm_freq = qa.Estimation(nor, B_ext, gamma, gamma, gamma_name, gamma_name)"
    ]
   },
   {
@@ -203,7 +207,7 @@
    "outputs": [],
    "source": [
     "skip_points_start = 0\n",
-    "skip_points_end = 0\n",
+    "skip_points_end = 20\n",
     "error_fix = 0 # increase with 0.1 step\n",
     "\n",
     "# Rabi fitting\n",
@@ -253,14 +257,14 @@
     "\n",
     "axs[0,1].plot(XY8_roi_time, XY8_roi_signal, label = 'pi/2')\n",
     "axs[0,1].plot(XY8_roi_time, XY8_roi_signal_alt, label = '3pi/2')\n",
-    "axs[0,1].set(xlabel = 'Tau (us)', ylabel = 'Florescence (a.u.)', title = 'NV XY8-' + str(N))\n",
+    "axs[0,1].set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Florescence (a.u.)', title = 'NV XY8-' + str(N))\n",
     "axs[0,1].plot(XY8_roi_time, qa.cos_func(XY8_roi_time, *Rabi_popt), 'r--', label='Rabi')\n",
     "axs[0,1].legend()\n",
     "\n",
     "axs[1,0].plot(XY8_roi_time, XY8_norm, label = 'pi/2')\n",
     "axs[1,0].plot(XY8_roi_time, XY8_norm_alt, label = '3pi/2')\n",
     "axs[1,0].plot(XY8_roi_time, XY8_delta, '--', label = 'Mean delta')\n",
-    "axs[1,0].set(xlabel = 'Tau (us)', ylabel = 'Florescence (norm.)', title = 'NV XY8-'+ str(N) + ' normalized data')\n",
+    "axs[1,0].set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Florescence (norm.)', title = 'NV XY8-'+ str(N) + ' normalized data')\n",
     "# Expected sensing spacing\n",
     "axs[1,0].axvline(x = tau, color = 'grey', linestyle = '--')\n",
     "axs[1,0].text(tau, np.max(XY8_norm_alt), gamma_name, color = 'grey', fontsize = 15)\n",
@@ -279,7 +283,7 @@
     "    axs[1,1].text(Larm_freq2, np.max(Spectral_dens) - 50, gamma2_name, color = 'olive', fontsize = 15)\n",
     "axs[1,1].legend()\n",
     "\n",
-    "plt.savefig(Sample_name + \" spectral density.png\")"
+    "# plt.savefig(Sample_name + \" spectral density.png\")"
    ]
   },
   {
@@ -345,14 +349,53 @@
     "if nor == 2:\n",
     "    center2 = center + (Larm_freq - Larm_freq2) # OR = center - (Larm_freq - Larm_freq2)\n",
     "    Lorentzian_p0 = np.array([amplitude, center, sigma, amplitude, center2, sigma, baseline])\n",
-    "#     Lorentzian_p0 = np.array([117, 675, 14, 85, 770, sigma, baseline])\n",
+    "#     Lorentzian_p0 = np.array([54, 770, 20, 35, 932, 20, 10])\n",
     "    Spectrum_fit, pcov = curve_fit(qa.double_Lorentzian_func, XY8_frequency, Spectral_dens, Lorentzian_p0)\n",
     "else:\n",
     "    Lorentzian_p0 = np.array([amplitude, center, sigma, baseline])\n",
     "#     Lorentzian_p0 = np.array([54, 770, 20, 0])\n",
     "    Spectrum_fit, pcov = curve_fit(qa.Lorentzian_func, XY8_frequency, Spectral_dens, Lorentzian_p0)\n",
     "    \n",
-    "print(Lorentzian_p0)"
+    "decay_check = 0    \n",
+    "print(Lorentzian_p0)\n",
+    "print(Spectrum_fit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Slopy baseline\n",
+    "\n",
+    "Adding linear function for better fitting of data with slopy baseline. Use either this or previous cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amplitude = np.max(Spectral_dens)\n",
+    "center = XY8_frequency[np.argmax(Spectral_dens)]\n",
+    "sigma = 70\n",
+    "baseline = Spectral_dens[0]\n",
+    "decay = Spectral_dens[-1]\n",
+    "\n",
+    "if nor == 2:\n",
+    "    center2 = center + (Larm_freq - Larm_freq2) # OR = center - (Larm_freq - Larm_freq2)\n",
+    "    amplitude2 = amplitude\n",
+    "    Lorentzian_p0 = np.array([amplitude, center, sigma, amplitude, center2, sigma, decay, baseline])\n",
+    "    Lorentzian_p0 = np.array([54, 770, 20, 35, 932, 20, 1, 10])\n",
+    "    Spectrum_fit, pcov = curve_fit(qa.double_Lorentzian_decay_func, XY8_frequency, Spectral_dens)\n",
+    "else:\n",
+    "    Lorentzian_p0 = np.array([amplitude, center, sigma, decay, baseline])\n",
+    "#     Lorentzian_p0 = np.array([54, 770, 20, 30, 0])\n",
+    "    Spectrum_fit, pcov = curve_fit(qa.Lorentzian_decay_func, XY8_frequency, Spectral_dens,Lorentzian_p0)\n",
+    "\n",
+    "decay_check = 1\n",
+    "print(Lorentzian_p0)\n",
+    "print(Spectrum_fit)"
    ]
   },
   {
@@ -370,14 +413,21 @@
    "source": [
     "fig, axs = plt.subplots(figsize = (18,10))\n",
     "axs.plot(XY8_frequency, Spectral_dens, 'o',label = 'Delta')\n",
-    "if nor == 2:\n",
-    "    axs.plot(XY8_frequency, qa.double_Lorentzian_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\namplitude2=%5.3f \\ncenter2=%5.3f  \\nsigma2=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
+    "if decay_check == 0:\n",
+    "    if nor == 2:\n",
+    "        axs.plot(XY8_frequency, qa.double_Lorentzian_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\namplitude2=%5.3f \\ncenter2=%5.3f  \\nsigma2=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
+    "    else:\n",
+    "        axs.plot(XY8_frequency, qa.Lorentzian_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
     "else:\n",
-    "    axs.plot(XY8_frequency, qa.Lorentzian_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
+    "    if nor == 2:\n",
+    "        axs.plot(XY8_frequency, qa.double_Lorentzian_decay_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\namplitude2=%5.3f \\ncenter2=%5.3f  \\nsigma2=%5.3f \\ndecay=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
+    "    else:\n",
+    "        axs.plot(XY8_frequency, qa.Lorentzian_decay_func(XY8_frequency, *Spectrum_fit), 'r--', label='fit:\\namplitude=%5.3f \\ncenter=%5.3f  \\nsigma=%5.3f \\ndecay=%5.3f \\noffset=%5.3f' % tuple(Spectrum_fit))\n",
+    "        \n",
     "axs.legend()\n",
     "axs.set(xlabel = 'Frequency (kHz)', ylabel = 'Power spectral density (kHz)', title = 'Noise spectral density')\n",
     "\n",
-    "plt.savefig(Sample_name + \" spectrum.png\")"
+    "# plt.savefig(Sample_name + \" spectrum.png\")"
    ]
   },
   {
@@ -397,7 +447,7 @@
    "source": [
     "# Experimental Larmor frequency and magnetic field\n",
     "peak_freq = Spectrum_fit[1]\n",
-    "B_calc = peak_freq * 1e3 / gamma2\n",
+    "B_calc = peak_freq * 1e3 / gamma\n",
     "\n",
     "# Checking that fitted peaks relative positions are same as theoretical\n",
     "if nor == 2:\n",
@@ -440,12 +490,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the integral of the magnetic noise spectrum with substracted offset\n",
+    "spectrum_area = np.trapz(qa.Lorentzian_func(XY8_frequency, *Spectrum_fit[0:3], Spectrum_fit[3]) - Spectrum_fit[3], x = np.sort(XY8_frequency))/ 1e6    # MHz^2\n",
+    "# Lorentzian linewidth with the substracted offset\n",
+    "linewidth = 2 * np.abs(Spectrum_fit[2])\n",
     "if nor == 2:\n",
     "    # Getting the integral of the magnetic noise spectrum with substracted offset\n",
-    "    spectrum_area = np.trapz(qa.Lorentzian_func(XY8_frequency, *Spectrum_fit[0:3], Spectrum_fit[6]) - Spectrum_fit[6], x = np.sort(XY8_frequency))/ 1e6    # MHz^2\n",
     "    spectrum_area2 = np.trapz(qa.Lorentzian_func(XY8_frequency, *Spectrum_fit[3:]) - Spectrum_fit[6], x = np.sort(XY8_frequency))/ 1e6     #MHz^2\n",
     "    # Lorentzian linewidth with the substracted offset\n",
-    "    linewidth = 2 * np.abs(Spectrum_fit[2])\n",
     "    linewidth2 = 2 * np.abs(Spectrum_fit[5])\n",
     "    if check == 1:\n",
     "        spectrum_area, spectrum_area2 = spectrum_area2, spectrum_area\n",
@@ -453,18 +505,14 @@
     "    print(gamma_name + ' Lorentzian linewidth:', round(linewidth,2), 'kHz')\n",
     "    print(gamma2_name + ' Lorentzian linewidth:', round(linewidth2,2), 'kHz')\n",
     "else:\n",
-    "    # Getting the integral of the magnetic noise spectrum with substracted offset\n",
-    "    spectrum_area = np.trapz(qa.Lorentzian_func(XY8_frequency, *Spectrum_fit[0:3], Spectrum_fit[3]) - Spectrum_fit[3], x = np.sort(XY8_frequency))/ 1e6    # MHz^2\n",
-    "    # Lorentzian linewidth with the substracted offset\n",
-    "    linewidth = 2 * np.abs(Spectrum_fit[2])\n",
     "    print(gamma_name + ' Lorentzian linewidth:', round(linewidth,2), 'kHz')\n",
     "    \n",
     "# The magnetic field fluctuations (NMR magnetic signal)\n",
     "B1 = (2 * spectrum_area / qa.gamma_e**2)**0.5    # T\n",
-    "print(gamma_name + ' B1 =', round(B1 * 1e6,2), 'uT')\n",
+    "print(gamma_name + ' B1 =', round(B1 * 1e6,2), '\\u03BCT')\n",
     "if nor == 2:\n",
     "    B2 = (2 * spectrum_area2 / qa.gamma_e**2)**0.5    # T\n",
-    "    print(gamma2_name + ' B2 =', round(B2 * 1e6,2), 'uT')"
+    "    print(gamma2_name + ' B2 =', round(B2 * 1e6,2), '\\u03BCT')"
    ]
   },
   {
