Correction of the XY8 part

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Importing libraries and qudi_analysis where main constants and functions are defined.\n",
     "\n",
-    "In data import second argument is used to extract data with an alternating signal (number of columns)."
+    "In the data import of pulsed measurements the second argument is used to extract the data with an alternating signal (number of columns)."
    ]
   },
   {
@@ -151,7 +151,7 @@
     "# Magnetic field (use values from the qudi ODMR fitting)\n",
     "ODMR_left = 2870 * 1e6   #Hz\n",
     "ODMR_right = 4000 * 1e6    #Hz\n",
-    "B_ext = ((ODMR_right - ODMR_left) * 2)/ (2 * qa.gamma_NV)    #G\n",
+    "B_ext = (ODMR_right - ODMR_left)/ (2 * qa.gamma_NV)    #G\n",
     "# B_ext = 412   # G\n",
     "\n",
     "# Rabi fitting (use values from the qudi .png file)\n",
@@ -225,7 +225,7 @@
     "\n",
     "skip_points_end: To remove some noise.\n",
     "\n",
-    "error_fix: If there is an error during spectral density calculation."
+    "error_fix: If there is an error during spectral density calculation due to overlap of the main and  the alternating signals."
    ]
   },
   {
@@ -347,23 +347,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XY8-N comparison\n",
+    "\n",
+    "Use this part to compare XY8-N signals for different N."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Data to compare\n",
-    "XY8_6_roi_time = XY8_roi_time\n",
-    "XY8_6_delta = XY8_delta\n",
-    "XY8_6_frequency = XY8_frequency\n",
-    "XY8_6_spectral_dens = Spectral_dens\n",
+    "if N == 2:\n",
+    "    XY8_2_roi_time = XY8_roi_time\n",
+    "    XY8_2_delta = XY8_delta\n",
+    "    XY8_2_frequency = XY8_frequency\n",
+    "    XY8_2_spectral_dens = Spectral_dens\n",
+    "    \n",
+    "if N == 4:\n",
+    "    XY8_4_roi_time = XY8_roi_time\n",
+    "    XY8_4_delta = XY8_delta\n",
+    "    XY8_4_frequency = XY8_frequency\n",
+    "    XY8_4_spectral_dens = Spectral_dens\n",
+    "\n",
+    "if N == 6:\n",
+    "    XY8_6_roi_time = XY8_roi_time\n",
+    "    XY8_6_delta = XY8_delta\n",
+    "    XY8_6_frequency = XY8_frequency\n",
+    "    XY8_6_spectral_dens = Spectral_dens\n",
+    "    \n",
+    "if N == 8:\n",
+    "    XY8_8_roi_time = XY8_roi_time\n",
+    "    XY8_8_delta = XY8_delta\n",
+    "    XY8_8_frequency = XY8_frequency\n",
+    "    XY8_8_spectral_dens = Spectral_dens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #### Data to compare\n",
+    "# XY8_6_roi_time = XY8_roi_time\n",
+    "# XY8_6_delta = XY8_delta\n",
+    "# XY8_6_frequency = XY8_frequency\n",
+    "# XY8_6_spectral_dens = Spectral_dens\n",
     "\n",
     "fig, axs = plt.subplots(2, 1, figsize = (20,13))\n",
     "\n",
     "axs[0].plot(XY8_2_roi_time, XY8_2_delta, label = 'XY8-2')\n",
     "axs[0].plot(XY8_4_roi_time, XY8_4_delta, label = 'XY8-4')\n",
     "axs[0].plot(XY8_6_roi_time, XY8_6_delta, label = 'XY8-6')\n",
-    "# axs[0].plot(XY8_8_roi_time, XY8_8_delta, label = 'XY8-8')\n",
+    "axs[0].plot(XY8_8_roi_time, XY8_8_delta, label = 'XY8-8')\n",
     "axs[0].set(xlim=(0.5, 0.8), xlabel = 'Tau (\\u03BCs)', ylabel = 'Florescence (norm.)', title = 'NV3 XY8-N normalized data')\n",
     "# Expected sensing spacing\n",
     "axs[0].axvline(x = tau, color = 'grey', linestyle = '--')\n",
@@ -376,7 +416,7 @@
     "axs[1].plot(XY8_2_frequency, XY8_2_spectral_dens, label = 'XY8-2')\n",
     "axs[1].plot(XY8_4_frequency, XY8_4_spectral_dens, label = 'XY8-4')\n",
     "axs[1].plot(XY8_6_frequency, XY8_6_spectral_dens, label = 'XY8-6')\n",
-    "# axs[1].plot(XY8_8_frequency, XY8_8_spectral_dens, label = 'XY8-8')\n",
+    "axs[1].plot(XY8_8_frequency, XY8_8_spectral_dens, label = 'XY8-8')\n",
     "axs[1].set(xlim=(635, 1000),xlabel = 'Frequency (kHz)', ylabel = 'Power spectral density (kHz)', title = 'NV3 spectral density')\n",
     "# Expected Larmor frequencies\n",
     "axs[1].axvline(x = Larm_freq, color = 'grey', linestyle = '--')\n",
@@ -443,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nor = 1"
+    "# nor = 1 # number of resonances"
    ]
   },
   {
@@ -462,11 +502,11 @@
     "if nor == 2:\n",
     "    center2 = center + (Larm_freq - Larm_freq2) # OR = center - (Larm_freq - Larm_freq2)\n",
     "    Lorentzian_p0 = np.array([amplitude, center, sigma, amplitude, center2, sigma, baseline])\n",
-    "#     Lorentzian_p0 = np.array([400, 1900, 50, 110, 1785, 60, 0])\n",
+    "#     Lorentzian_p0 = np.array([400, 1900, 50, 110, 1785, 60, 0]) # if fitting doesn't work use manual values\n",
     "    Spectrum_fit, pcov = curve_fit(qa.double_Lorentzian_func, XY8_frequency, Spectral_dens, Lorentzian_p0)\n",
     "else:\n",
     "    Lorentzian_p0 = np.array([amplitude, center, sigma, baseline])\n",
-    "#     Lorentzian_p0 = np.array([89, 675, 20, 0])\n",
+    "#     Lorentzian_p0 = np.array([89, 675, 20, 0]) # if fitting doesn't work use manual values\n",
     "    Spectrum_fit, pcov = curve_fit(qa.Lorentzian_func, XY8_frequency, Spectral_dens, Lorentzian_p0)\n",
     "    \n",
     "decay_check = 0    \n",
@@ -1089,7 +1129,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "fig.savefig(title + \"_spectrum.png\")"
+    "# fig.savefig(title + \"_spectrum.png\")"
    ]
   },
   {
@@ -1135,7 +1175,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "fig.savefig(title + \"_gradient.png\")"
+    "# fig.savefig(title + \"_gradient.png\")"
    ]
   },
   {
