--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -208,8 +208,8 @@
     "Sample_name = 'Sample'\n",
     "\n",
     "# Rabi fitting (use values from the qudi .png file)\n",
-    "amplitude = 0.2    # a.u.\n",
-    "freq = 22    # MHz\n",
+    "amplitude = 0.8    # a.u.\n",
+    "freq = 13    # MHz\n",
     "offset = 0.9    # a.u.\n",
     "phase = 0    # rad"
    ]
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "T2_popt, T2_pcov = curve_fit(qa.T2_func, T2_time, T2_delta)\n",
-    "print('Coherence time T2 =', round(T2_popt[1],2), 'us')\n",
+    "print('Coherence time T2 =', round(T2_popt[1],2), '\\u03BCs')\n",
     "\n",
     "#Rabi offset\n",
     "Rabi_p0 = np.array([amplitude, freq, phase, offset]) \n",
@@ -261,11 +261,11 @@
     "axs[0].set(xlabel = 'Tau (us)', ylabel = 'Fluorescence (a.u.)', title = 'NV Hahn Echo')\n",
     "axs[0].legend()\n",
     "\n",
-    "axs[1].plot(T2_time, T2_delta, 'g')\n",
+    "axs[1].plot(T2_time, T2_delta, 'g.-')\n",
     "axs[1].plot(T2_time, qa.T2_func(T2_time, *T2_popt), 'r--', label='fit: \\nampl=%5.3f \\nT2=%5.3f \\noffset=%5.3f' % tuple(T2_popt))\n",
     "axs[1].axhline(y = Rabi_popt[3], color = 'grey', linestyle = ':')\n",
     "axs[1].text(0, Rabi_popt[3], 'Rabi offset', color = 'grey', fontsize = 13)\n",
-    "axs[1].set(xlabel = 'Tau (us)', ylabel = 'Fluorescence (a.u.)', title = 'NV coherence time')\n",
+    "axs[1].set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Fluorescence (a.u.)', title = 'NV coherence time')\n",
     "axs[1].legend()\n",
     "\n",
     "# fig.savefig(Sample_name + \" Coherence time.png\")"
@@ -295,13 +295,14 @@
    "source": [
     "osc = Rabi_signal\n",
     "fs = Rabi_time[1] - Rabi_time[0]    # Sampling frequency, us\n",
-    "fft_osc = rfft(osc)        # Real values of FFT\n",
+    "fft_osc = rfft(osc - np.mean(osc))        # Real values of FFT #Subtract mean so you dont get a f=0 component\n",
     "fft_fre = rfftfreq(len(Rabi_time), d = fs)\n",
     "\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, figsize = (18,5))\n",
     "axs[0].plot(Rabi_time, osc)\n",
-    "axs[0].set(xlabel = 'Tau (us)', ylabel = 'Fluorescence (a.u.)', title = 'Hahn Echo without exp decay')\n",
+    "axs[0].plot(Rabi_time, osc - np.mean(osc))\n",
+    "axs[0].set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Fluorescence (a.u.)', title = 'Hahn Echo without exp decay')\n",
     "\n",
     "axs[1].plot(fft_fre, np.abs(fft_osc))\n",
     "axs[1].set(xlabel = 'Frequency (MHz)', ylabel = 'Amplitude (a.u.)', title = 'NV FFT')"
@@ -382,7 +383,23 @@
    "outputs": [],
    "source": [
     "#### Append the array\n",
-    "# XY8-N; Second half of the region of interest\n",
+    "# XY8-N; Second part of the region of interest\n",
+    "filename2=r\"Your_file.dat\"\n",
+    "XY8_roi_time_2, XY8_roi_signal_2, XY8_roi_signal_alt_2, XY8_roi_delta_2 = qa.qudi_reader(filename2, 3)\n",
+    "XY8_roi_time = np.append(XY8_roi_time, XY8_roi_time_2)\n",
+    "XY8_roi_signal = np.append(XY8_roi_signal, XY8_roi_signal_2)\n",
+    "XY8_roi_signal_alt = np.append(XY8_roi_signal_alt, XY8_roi_signal_alt_2)\n",
+    "XY8_roi_delta = np.append(XY8_roi_delta, XY8_roi_delta_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Append the array\n",
+    "# XY8-N; Third part of the region of interest\n",
     "filename2=r\"Your_file.dat\"\n",
     "XY8_roi_time_2, XY8_roi_signal_2, XY8_roi_signal_alt_2, XY8_roi_delta_2 = qa.qudi_reader(filename2, 3)\n",
     "XY8_roi_time = np.append(XY8_roi_time, XY8_roi_time_2)\n",
@@ -422,53 +439,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sample_name = 'Sample 19 LiF NV3 Li XY8-6 439G'\n",
+    "Sample_name = 'Sample'\n",
     "\n",
     "# Number of XY8 blocks\n",
-    "N = 6\n",
+    "N = 2\n",
     "\n",
     "# Number of resonances\n",
-    "nor = 1 # 1 or 2\n",
+    "nor = 2 # 1 or 2\n",
     "\n",
     "# Magnetic field (use values from the qudi ODMR fitting) If only one dip was measured equilize the other one to 0.\n",
-    "ODMR_left = 2838 * 1e6   #Hz\n",
-    "ODMR_right = 2909 * 1e6    #Hz\n",
+    "ODMR_left = 2307.3 * 1e6   #Hz\n",
+    "ODMR_right = 3441.5 * 1e6    #Hz\n",
+    "ODMR_center = 2870 * 1e6    #Hz\n",
     "if ODMR_left == 0 or ODMR_right == 0:\n",
     "    if ODMR_left == 0:\n",
     "        ODMR_dip = ODMR_right\n",
     "    else:\n",
     "        ODMR_dip = ODMR_left\n",
-    "    B_ext = abs((ODMR_dip - 2870 * 1e6)) / (2 * qa.gamma_NV)    #G\n",
+    "    B_ext = abs((ODMR_dip - ODMR_center)) / (qa.gamma_NV)    #G\n",
     "else:\n",
-    "    B_ext = (ODMR_right - ODMR_left)/ (2 * qa.gamma_NV)    #G\n",
-    "# Or use manual value for the magnetic field.\n",
+    "    ODMR_center = (ODMR_right + ODMR_left) / 2\n",
+    "    ODMR_delta = ODMR_right - ODMR_left\n",
+    "    B_ext = ODMR_delta / (2 * qa.gamma_NV)    #G\n",
+    "    ODMR_angle = qa.thetaB(ODMR_delta)\n",
+    "    \n",
+    "# Or use a manual value for the magnetic field.\n",
     "# B_ext = 412   # G\n",
     "\n",
     "# Rabi fitting (use values from the qudi Rabi fitting)\n",
-    "amplitude = 0.15    # a.u.\n",
-    "freq = 15   # MHz\n",
+    "amplitude = 0.05    # a.u.\n",
+    "freq = 24   # MHz\n",
     "offset = 0.9    # a.u.\n",
     "phase = 0    # rad\n",
     "\n",
     "# Select isotopes \n",
-    "gamma = qa.gamma_13C    # Hz/G\n",
-    "gamma_name = '13C'\n",
+    "gamma = qa.gamma_31P    # Hz/G\n",
+    "gamma_name = '31P'\n",
     "if nor == 2: # Second isotope\n",
-    "    gamma2 = qa.gamma_19F    # Hz/G\n",
-    "    gamma2_name = '19F'\n",
+    "    gamma2 = qa.gamma_1H    # Hz/G\n",
+    "    gamma2_name = '1H'\n",
     "# else:\n",
     "#     gamma2 = gamma\n",
     "#     gamma2_name = gamma_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(B_ext, 'G')\n",
-    "print(gamma, 'Hz/G')"
    ]
   },
   {
@@ -525,8 +537,8 @@
    "outputs": [],
    "source": [
     "skip_points_start = 0\n",
-    "skip_points_end = 11\n",
-    "error_fix = 0 # increase with 0.01 step\n",
+    "skip_points_end = 0\n",
+    "error_fix = 0.00 # increase with 0.01 step\n",
     "\n",
     "# Rabi fitting\n",
     "Rabi_p0 = np.array([amplitude, freq, phase, offset]) \n",
@@ -591,14 +603,15 @@
     "    axs[1,0].text(tau2, np.max(XY8_norm_alt) - 0.1, gamma2_name, color = 'olive', fontsize = 15)\n",
     "axs[1,0].legend()\n",
     "\n",
-    "axs[1,1].plot(XY8_frequency, Spectral_dens, 'g', label = 'Mean delta')\n",
+    "axs[1,1].plot(XY8_frequency, Spectral_dens, '.-g', label = 'Mean delta')\n",
     "axs[1,1].set(xlabel = 'Frequency (kHz)', ylabel = 'Power spectral density (kHz)', title = 'NV spectral density')\n",
     "# Expected Larmor frequencies\n",
     "axs[1,1].axvline(x = Larm_freq, color = 'grey', linestyle = '--')\n",
+    "# axs[1,1].set(xlim=(500, 1000))\n",
     "axs[1,1].text(Larm_freq, np.max(Spectral_dens), gamma_name, color = 'grey', fontsize = 15)\n",
     "if nor == 2 and tau != tau2:\n",
     "    axs[1,1].axvline(x = Larm_freq2, color = 'olive', linestyle = '--')\n",
-    "    axs[1,1].text(Larm_freq2, np.max(Spectral_dens) - 50, gamma2_name, color = 'olive', fontsize = 15)\n",
+    "    axs[1,1].text(Larm_freq2, np.max(Spectral_dens) - 50, gamma2_name, color = 'olive', fontsize = 15) #np.max(Spectral_dens) - 50\n",
     "axs[1,1].legend()\n",
     "\n",
     "plt.savefig(Sample_name + \" spectral density.png\")"
@@ -1088,18 +1101,82 @@
     "wavelength9,spectrum9 = qa.csvReader(filename9)\n",
     "label9 =  filename9[:-4] #'Bright spot 4' #'90 \\u03BCW'\n",
     "\n",
-    "# filename10 = \"Sample31_NV10_90uW_60s.csv\"\n",
+    "# filename10 = \"Your_file.csv\"\n",
     "# wavelength10,spectrum10 = qa.csvReader(filename10)\n",
     "# label10 =  filename10[:-4] #'Bright spot 5' #'100 \\u03BCW'\n",
     "\n",
     "# Background files to plot or for the corrections\n",
-    "# background1 = \"Sample31_12C_background_90uW_60s.csv\"\n",
+    "# background1 = \"Your_background_file.csv\"\n",
     "# wavelength_b1,spectrum_b1 = qa.csvReader(background1)\n",
     "# label_b1 =  background1[:-4] #'Background'\n",
     "\n",
-    "# background2 = \"Sample 17_background_110uW_60s.csv\"\n",
+    "# background2 = \"Your_background_file.csv\"\n",
     "# wavelength_b2,spectrum_b2 = qa.csvReader(background2)\n",
-    "# label_b2 =  background1[:-4] #'Background 2'"
+    "# label_b2 =  background2[:-4] #'Background 2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data import for spectra that was taken as one measurement with multiple frames."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(r\"D:\\Your\\Directory\")\n",
+    "\n",
+    "# Spectra files to plot. Use file name as a label or change it manually.\n",
+    "filename = \"Your_file.csv\"\n",
+    "\n",
+    "reader = np.loadtxt(filename, delimiter=',') #Directory of the data in *.csv format\n",
+    "index = reader[:,1]\n",
+    "wavelength_all = reader[:,5] # np.array of float values of the wavelength\n",
+    "spectrum_all = reader[:,4] # np.array of float values of the signal\n",
+    "\n",
+    "wavelength = wavelength_all[np.where(index == 1)]\n",
+    "spectrum = spectrum_all[np.where(index == 1)]\n",
+    "label1 =  '10 s'\n",
+    "\n",
+    "wavelength2 = wavelength_all[np.where(index == 2)]\n",
+    "spectrum2 = spectrum_all[np.where(index == 2)]\n",
+    "label2 =  '20 s'\n",
+    "\n",
+    "wavelength3 = wavelength_all[np.where(index == 3)]\n",
+    "spectrum3 = spectrum_all[np.where(index == 3)]\n",
+    "label3 =  '30 s'\n",
+    "\n",
+    "wavelength4 = wavelength_all[np.where(index == 4)]\n",
+    "spectrum4 = spectrum_all[np.where(index == 4)]\n",
+    "label4 =  '40 s'\n",
+    "\n",
+    "wavelength5 = wavelength_all[np.where(index == 5)]\n",
+    "spectrum5 = spectrum_all[np.where(index == 5)]\n",
+    "label5 =  '50 s'\n",
+    "\n",
+    "wavelength6 = wavelength_all[np.where(index == 6)]\n",
+    "spectrum6 = spectrum_all[np.where(index == 6)]\n",
+    "label6 =  '60 s'\n",
+    "\n",
+    "wavelength7 = wavelength_all[np.where(index == 7)]\n",
+    "spectrum7 = spectrum_all[np.where(index == 7)]\n",
+    "label7 =  '70 s'\n",
+    "\n",
+    "wavelength8 = wavelength_all[np.where(index == 8)]\n",
+    "spectrum8 = spectrum_all[np.where(index == 8)]\n",
+    "label8 =  '80 s'\n",
+    "\n",
+    "wavelength9 = wavelength_all[np.where(index == 9)]\n",
+    "spectrum9 = spectrum_all[np.where(index == 9)]\n",
+    "label9 =  '90 s'\n",
+    "\n",
+    "wavelength10 = wavelength_all[np.where(index == 10)]\n",
+    "spectrum10 = spectrum_all[np.where(index == 10)]\n",
+    "label10 =  '100 s'"
    ]
   },
   {
@@ -1114,29 +1191,6 @@
    "metadata": {},
    "source": [
     "### Corrections and plotting parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Main plotting parameters, change according to your measurements."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xmin = min(wavelength)\n",
-    "xmax = max(wavelength)\n",
-    "ymin = min(spectrum)\n",
-    "ymax = max(spectrum7) + 100\n",
-    "\n",
-    "title = 'Silver crystal with deposited P'\n",
-    "xlabel = 'Wavelength (nm)'\n",
-    "ylabel = 'Counts (arb. units)'"
    ]
   },
   {
@@ -1209,6 +1263,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Main plotting parameters, change according to your measurements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xmin = min(wavelength)\n",
+    "xmax = max(wavelength)\n",
+    "ymin = min(spectrum)\n",
+    "ymax = max(spectrum) + 100\n",
+    "\n",
+    "title = 'Sample'\n",
+    "xlabel = 'Wavelength (nm)'\n",
+    "ylabel = 'Counts (arb. units)'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Interactive plot"
    ]
   },
@@ -1254,27 +1331,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(figsize=(18,10))\n",
     "\n",
-    "axs.plot(wavelength, spectrum + offset, '-', color = 'tab:blue', label = label1)\n",
-    "axs.plot(wavelength2, spectrum2 + offset2, '-', color = 'tab:green', label = label2)\n",
-    "axs.plot(wavelength3, spectrum3 + offset3, '-', color = 'tab:orange', label = label3)\n",
-    "axs.plot(wavelength4, spectrum4 + offset4, '-', color = 'tab:red', label = label4)\n",
-    "axs.plot(wavelength5, spectrum5 + offset5, '-', color = 'tab:cyan', label = label5)\n",
-    "axs.plot(wavelength6, spectrum6 + offset6, '-', color = 'tab:brown', label = label6)\n",
-    "axs.plot(wavelength7, spectrum7 + offset7, '-', color = 'tab:olive', label = label7)\n",
-    "axs.plot(wavelength8, spectrum8 + offset8, '-', color = 'tab:purple', label = label8)\n",
-    "axs.plot(wavelength9, spectrum9 + offset9, '-', color = 'tab:pink', label = label9)\n",
-    "# axs.plot(wavelength10, spectrum10 + offset10, '-', color = 'tab:gray', label = label10)\n",
+    "axs.plot(wavelength[0:1339], spectrum[0:1339] + offset, '-', color = 'tab:blue', label = label1)\n",
+    "axs.plot(wavelength2[0:1339], spectrum2[0:1339] + offset2, '-', color = 'tab:green', label = label2)\n",
+    "axs.plot(wavelength3[0:1339], spectrum3[0:1339] + offset3, '-', color = 'tab:orange', label = label3)\n",
+    "axs.plot(wavelength4[0:1339], spectrum4[0:1339] + offset4, '-', color = 'tab:red', label = label4)\n",
+    "axs.plot(wavelength5[0:1339], spectrum5[0:1339] + offset5, '-', color = 'tab:cyan', label = label5)\n",
+    "axs.plot(wavelength6[0:1339], spectrum6[0:1339] + offset6, '-', color = 'tab:brown', label = label6)\n",
+    "axs.plot(wavelength7[0:1339], spectrum7[0:1339] + offset7, '-', color = 'tab:olive', label = label7)\n",
+    "axs.plot(wavelength8[0:1339], spectrum8[0:1339] + offset8, '-', color = 'tab:purple', label = label8)\n",
+    "axs.plot(wavelength9[0:1339], spectrum9[0:1339] + offset9, '-', color = 'tab:pink', label = label9)\n",
+    "# axs.plot(wavelength10[0:1339], spectrum10[0:1339] + offset10, '-', color = 'tab:gray', label = label10)\n",
     "# axs.plot(wavelength_b1, spectrum_b1 + offset_b1, '-', color = 'gold', label = label_b1)\n",
     "# axs.plot(wavelength_b2, spectrum_b2 + offset_b2, '-', color = 'lime', label = label_b2)\n",
     "\n",
     "# To add line with a label to the plot\n",
     "# axs.axvline(x = 650, color='grey', linestyle='--')\n",
     "# axs.text(641, 650, '650 nm',color='grey',fontsize = 15)\n",
+    "\n",
+    "# The energy axis\n",
+    "def energy(x):\n",
+    "    \"\"\"Vectorized 1/x, treating x==0 manually\"\"\"\n",
+    "    x = np.array(x, float)\n",
+    "    near_zero = np.isclose(x, 0)\n",
+    "    x[near_zero] = np.inf\n",
+    "    x[~near_zero] = 1237.8 / x[~near_zero]\n",
+    "    return x\n",
+    "# the function \"1/x\" is its own inverse\n",
+    "inverse = energy\n",
+    "secax = axs.secondary_xaxis('top', functions=(energy, inverse))\n",
+    "secax.set_xlabel('Energy (eV)')\n",
     "\n",
     "axs.set(xlim=(xmin, xmax),ylim=(ymin, ymax), xlabel=xlabel, ylabel=ylabel, title=title)\n",
     "axs.grid(True)\n",
@@ -1307,7 +1399,7 @@
    "outputs": [],
    "source": [
     "# Number of plots\n",
-    "num_plot = 8\n",
+    "num_plot = 10\n",
     "# You can use different color palette\n",
     "palette = list(sns.color_palette('inferno', num_plot).as_hex()) # Colormaps:'viridis', 'plasma', 'inferno', 'magma', 'cividis'"
    ]
@@ -1328,8 +1420,8 @@
     "axs.plot(wavelength6, spectrum6 + offset6, '-', color = palette[5], label = label6)\n",
     "axs.plot(wavelength7, spectrum7 + offset7, '-', color = palette[6], label = label7)\n",
     "axs.plot(wavelength8, spectrum8 + offset8, '-', color = palette[7], label = label8)\n",
-    "# axs.plot(wavelength9, spectrum9 + offset9, '-', color = palette[8], label = label9)\n",
-    "# axs.plot(wavelength10, spectrum10 + offset10, '-', color = palette[9], label = label10)\n",
+    "axs.plot(wavelength9, spectrum9 + offset9, '-', color = palette[8], label = label9)\n",
+    "axs.plot(wavelength10, spectrum10 + offset10, '-', color = palette[9], label = label10)\n",
     "\n",
     "\n",
     "axs.set(xlim=(xmin, xmax),ylim=(ymin, ymax), xlabel=xlabel, ylabel=ylabel, title=title)\n",
@@ -1766,7 +1858,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "287.533px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
