Update of ODMR, Rabi, Hahn Echo and Confocal

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -15,13 +15,15 @@
     "\n",
     "ODMR: unfinished, Lorentzian dip fitting\n",
     "\n",
+    "Rabi: double check\n",
+    "\n",
     "Hahn Echo: add Fourier transform\n",
     "\n",
-    "XY8: spin density\n",
+    "XY8: spin density, B0 angle\n",
     "\n",
     "Spectra: cosmic ray correction\n",
     "\n",
-    "Confocal imaging"
+    "Confocal imaging: needs corrections"
    ]
   },
   {
@@ -49,6 +51,7 @@
     "from scipy.fft import rfft, rfftfreq\n",
     "import plotly.express as px\n",
     "import os\n",
+    "import re\n",
     "\n",
     "import qudi_analysis_functions as qa"
    ]
@@ -89,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Number of resonance dips\n",
-    "nor = 2 # 1 or 2\n",
+    "nor = 1 # 1 or 2\n",
     "\n",
     "# ODMR fitting (use values from the qudi ODMR fitting)\n",
     "amplitude = 0.15    # a.u.\n",
@@ -97,10 +100,10 @@
     "sigma = 0.9    # a.u.\n",
     "baseline = 0    # rad\n",
     "\n",
-    "amplitude = np.max(Spectral_dens)\n",
-    "center = XY8_frequency[np.argmax(Spectral_dens)]\n",
-    "sigma = 30\n",
-    "baseline = Spectral_dens[0]"
+    "# amplitude = np.max(Spectral_dens)\n",
+    "# center = XY8_frequency[np.argmax(Spectral_dens)]\n",
+    "# sigma = 30\n",
+    "# baseline = Spectral_dens[0]"
    ]
   },
   {
@@ -131,12 +134,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(figsize=(18,10))\n",
+    "fig, axs = plt.subplots(figsize=(9,5))\n",
+    "# plt.rcParams.update({'font.size': 15})\n",
     "\n",
-    "axs.plot(ODMR_freq, ODMR_signal, '-o')\n",
-    "axs.set(xlabel = 'Frequency, MHz', ylabel = 'Fluorescence (a.u.)', title = 'NV ODMR')\n",
-    "axs.plot(ODMR_freq, qa.Lorentzian_func(ODMR_freq, *ODMR_popt), 'r--', label='fit:\\nampl=%5.3f \\nfreq=%5.3f MHz \\nphase=%5.3f \\noffset=%5.3f' % tuple(ODMR_popt))\n",
-    "axs.legend()"
+    "axs.plot(ODMR_freq/1e15, ODMR_signal, '-o')\n",
+    "axs.set(xlim=(5.38, 5.42), xlabel = 'Frequency, MHz', ylabel = 'Fluorescence (a.u.)', title = 'NV ODMR')\n",
+    "# axs.plot(ODMR_freq, qa.Lorentzian_func(ODMR_freq, *ODMR_popt), 'r--', label='fit:\\nampl=%5.3f \\nfreq=%5.3f MHz \\nphase=%5.3f \\noffset=%5.3f' % tuple(ODMR_popt))\n",
+    "# axs.legend()\n",
+    "plt.savefig(\"test.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rabi\n",
+    "## Experimental data and estimations\n",
+    "### Data import\n",
+    "\n",
+    "Uploading qudi .dat format data files for the analysis. Change directory and filenames of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(r\"D:\\Your\\Directory\")\n",
+    "# Rabi\n",
+    "filename = r\"Your_file.dat\"\n",
+    "Rabi_time, Rabi_signal = qa.qudi_reader(filename , 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables for the analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rabi fitting (use values from the qudi Rabi fitting)\n",
+    "amplitude = 0.145    # a.u.\n",
+    "freq = 9   # MHz\n",
+    "offset = 0.9    # a.u.\n",
+    "phase = 0    # rad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rabi fitting\n",
+    "Rabi_p0 = np.array([amplitude, freq, phase, offset]) \n",
+    "Rabi_popt, Rabi_pcov = curve_fit(qa.cos_func, Rabi_time, Rabi_signal, Rabi_p0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(figsize=(9,5))\n",
+    "\n",
+    "axs.plot(Rabi_time, Rabi_signal,'o-')\n",
+    "axs.set(xlabel = 'Tau (ns)', ylabel = 'Fluorescence (a.u.)', title = 'NV Rabi')\n",
+    "axs.plot(Rabi_time, qa.cos_func(Rabi_time, *Rabi_popt), 'r--', label='fit:\\nampl=%5.3f \\nfreq=%5.3f MHz \\nphase=%5.3f \\noffset=%5.3f' % tuple(Rabi_popt))\n",
+    "# axs.legend()\n",
+    "\n",
+    "# plt.savefig(\"test.png\")"
    ]
   },
   {
@@ -160,15 +242,6 @@
     "### Data import\n",
     "\n",
     "qudi for Hahn Echo measurements creates, plots and saves data with tau spacing between pulses instead of tau/2."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Check again data saving!!"
    ]
   },
   {
@@ -208,8 +281,8 @@
     "Sample_name = 'Sample'\n",
     "\n",
     "# Rabi fitting (use values from the qudi .png file)\n",
-    "amplitude = 0.8    # a.u.\n",
-    "freq = 13    # MHz\n",
+    "amplitude = 0.145    # a.u.\n",
+    "freq = 9    # MHz\n",
     "offset = 0.9    # a.u.\n",
     "phase = 0    # rad"
    ]
@@ -227,16 +300,8 @@
    "source": [
     "### Coherence time\n",
     "\n",
-    "Transforms data to correct tau spacing and calculates T2 time, fits the exponential decay."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Check how qudi saves the data!"
+    "Transforms data to correct tau spacing and calculates T2 time, fits the exponential decay.\n",
+    "T2_time is multiplied by 2 to correct qudi's saved spacings."
    ]
   },
   {
@@ -246,29 +311,45 @@
    "outputs": [],
    "source": [
     "T2_popt, T2_pcov = curve_fit(qa.T2_func, T2_time, T2_delta)\n",
-    "print('Coherence time T2 =', round(T2_popt[1],2), '\\u03BCs')\n",
+    "print('Coherence time T2 =', round(T2_popt[1] * 2,2), '\\u03BCs')\n",
     "\n",
     "#Rabi offset\n",
     "Rabi_p0 = np.array([amplitude, freq, phase, offset]) \n",
     "Rabi_popt, Rabi_pcov = curve_fit(qa.cos_func, Rabi_time, Rabi_signal, Rabi_p0)\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, figsize = (18,5))\n",
-    "axs[0].plot(T2_time, T2_signal, label = 'pi/2')\n",
-    "axs[0].plot(T2_time, T2_signal_alt, label = '3pi/2')\n",
-    "axs[0].plot(T2_time, T2_delta, '--', label = 'Mean delta')\n",
+    "axs[0].plot(T2_time * 2, T2_signal, label = 'pi/2')\n",
+    "axs[0].plot(T2_time * 2, T2_signal_alt, label = '3pi/2')\n",
+    "axs[0].plot(T2_time * 2, T2_delta, '--', label = 'Mean delta')\n",
     "axs[0].axhline(y = Rabi_popt[3], color = 'grey', linestyle = ':')\n",
     "axs[0].text(0, Rabi_popt[3], 'Rabi offset', color = 'grey', fontsize = 13)\n",
     "axs[0].set(xlabel = 'Tau (us)', ylabel = 'Fluorescence (a.u.)', title = 'NV Hahn Echo')\n",
     "axs[0].legend()\n",
     "\n",
-    "axs[1].plot(T2_time, T2_delta, 'g.-')\n",
-    "axs[1].plot(T2_time, qa.T2_func(T2_time, *T2_popt), 'r--', label='fit: \\nampl=%5.3f \\nT2=%5.3f \\noffset=%5.3f' % tuple(T2_popt))\n",
+    "axs[1].plot(T2_time*2, T2_delta, 'g.-')\n",
+    "axs[1].plot(T2_time*2, qa.T2_func(T2_time, *T2_popt), 'r--', label='fit: \\nampl=%5.3f \\nT2=%5.3f \\noffset=%5.3f' % tuple(T2_popt))\n",
     "axs[1].axhline(y = Rabi_popt[3], color = 'grey', linestyle = ':')\n",
     "axs[1].text(0, Rabi_popt[3], 'Rabi offset', color = 'grey', fontsize = 13)\n",
     "axs[1].set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Fluorescence (a.u.)', title = 'NV coherence time')\n",
     "axs[1].legend()\n",
     "\n",
     "# fig.savefig(Sample_name + \" Coherence time.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(figsize=(9,5))\n",
+    "\n",
+    "axs.plot(T2_time * 2, T2_delta, 'o-')\n",
+    "axs.plot(T2_time * 2, qa.T2_func(T2_time, *T2_popt), 'r--', label='Coherence time T$_{2}$ = ' + np.str(round(T2_popt[1] * 2,2)) + ' \\u03BCs')\n",
+    "axs.set(xlabel = 'Tau (\\u03BCs)', ylabel = 'Fluorescence (a.u.)', title = 'NV coherence time')\n",
+    "axs.legend()\n",
+    "\n",
+    "# plt.savefig(\"test.png\")"
    ]
   },
   {
@@ -442,14 +523,14 @@
     "Sample_name = 'Sample'\n",
     "\n",
     "# Number of XY8 blocks\n",
-    "N = 2\n",
+    "N = 6\n",
     "\n",
     "# Number of resonances\n",
-    "nor = 2 # 1 or 2\n",
+    "nor = 1 # 1 or 2\n",
     "\n",
     "# Magnetic field (use values from the qudi ODMR fitting) If only one dip was measured equilize the other one to 0.\n",
-    "ODMR_left = 2307.3 * 1e6   #Hz\n",
-    "ODMR_right = 3441.5 * 1e6    #Hz\n",
+    "ODMR_left = 2310 * 1e6   #Hz\n",
+    "ODMR_right = 3430 * 1e6    #Hz\n",
     "ODMR_center = 2870 * 1e6    #Hz\n",
     "if ODMR_left == 0 or ODMR_right == 0:\n",
     "    if ODMR_left == 0:\n",
@@ -461,23 +542,23 @@
     "    ODMR_center = (ODMR_right + ODMR_left) / 2\n",
     "    ODMR_delta = ODMR_right - ODMR_left\n",
     "    B_ext = ODMR_delta / (2 * qa.gamma_NV)    #G\n",
-    "    ODMR_angle = qa.thetaB(ODMR_delta)\n",
+    "#     ODMR_angle = qa.thetaB(ODMR_delta)\n",
     "    \n",
     "# Or use a manual value for the magnetic field.\n",
     "# B_ext = 412   # G\n",
     "\n",
     "# Rabi fitting (use values from the qudi Rabi fitting)\n",
-    "amplitude = 0.05    # a.u.\n",
-    "freq = 24   # MHz\n",
+    "amplitude = 0.15    # a.u.\n",
+    "freq = 15   # MHz\n",
     "offset = 0.9    # a.u.\n",
     "phase = 0    # rad\n",
     "\n",
     "# Select isotopes \n",
-    "gamma = qa.gamma_31P    # Hz/G\n",
-    "gamma_name = '31P'\n",
+    "gamma = qa.gamma_1H    # Hz/G\n",
+    "gamma_name = '1H'\n",
     "if nor == 2: # Second isotope\n",
-    "    gamma2 = qa.gamma_1H    # Hz/G\n",
-    "    gamma2_name = '1H'\n",
+    "    gamma2 = qa.gamma_19F    # Hz/G\n",
+    "    gamma2_name = '19F'\n",
     "# else:\n",
     "#     gamma2 = gamma\n",
     "#     gamma2_name = gamma_name"
@@ -611,7 +692,7 @@
     "axs[1,1].text(Larm_freq, np.max(Spectral_dens), gamma_name, color = 'grey', fontsize = 15)\n",
     "if nor == 2 and tau != tau2:\n",
     "    axs[1,1].axvline(x = Larm_freq2, color = 'olive', linestyle = '--')\n",
-    "    axs[1,1].text(Larm_freq2, np.max(Spectral_dens) - 50, gamma2_name, color = 'olive', fontsize = 15) #np.max(Spectral_dens) - 50\n",
+    "    axs[1,1].text(Larm_freq2, np.max(Spectral_dens) - 50, gamma2_name, color = 'olive', fontsize = 15)\n",
     "axs[1,1].legend()\n",
     "\n",
     "plt.savefig(Sample_name + \" spectral density.png\")"
@@ -1112,7 +1193,7 @@
     "\n",
     "# background2 = \"Your_background_file.csv\"\n",
     "# wavelength_b2,spectrum_b2 = qa.csvReader(background2)\n",
-    "# label_b2 =  background2[:-4] #'Background 2'"
+    "# label_b2 =  background1[:-4] #'Background 2'"
    ]
   },
   {
@@ -1331,9 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(figsize=(18,10))\n",
@@ -1455,14 +1534,14 @@
    "source": [
     "os.chdir(r\"D:\\Your\\Directory\") \n",
     "\n",
-    "filename = np.loadtxt(r'Saturation_acid.txt', delimiter=',')\n",
+    "filename = np.loadtxt(r'Saturation1.txt', delimiter=',')\n",
     "laser_power = filename[:,0] # np.array of float values of the laser power\n",
     "NV_counts = filename[:,1] # np.array of float values of the intensity\n",
     "NV_background = filename[:,2]# np.array of float values of the intensity\n",
     "NV_sub = NV_counts - NV_background\n",
     "\n",
     "##For the comaprison with an old data##\n",
-    "filename2 = np.loadtxt(r'Saturation.txt', delimiter=',')\n",
+    "filename2 = np.loadtxt(r'Saturation0.txt', delimiter=',')\n",
     "laser_power2 = filename2[:,0] # np.array of float values of the laser power\n",
     "NV_counts2 = filename2[:,1] # np.array of float values of the intensity\n",
     "NV_background2 = filename2[:,2]# np.array of float values of the intensity\n",
@@ -1720,8 +1799,14 @@
    "source": [
     "os.chdir(r\"D:\\Your\\Directory\")\n",
     "reader = np.loadtxt(r'Your_file.dat')\n",
-    "inputfile = open(r\"Your_file.dat\", 'r')\n",
-    "import re"
+    "inputfile = open(r\"Your_file.dat\", 'r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data analysis"
    ]
   },
   {
@@ -1737,16 +1822,24 @@
     "    if lineIndex > 4 and lineIndex < 15: \n",
     "        print(line[1:])\n",
     "        num = [float(x) for x in re.findall(match_number, line)]\n",
-    "        c.append(num[0])    \n",
-    "\n",
+    "        c.append(num[0])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# CHANGEBLE VALUES\n",
     "# To change contrast of the image, %\n",
     "colorbar_min = 100\n",
-    "colorbar_max = 100\n",
+    "colorbar_max = 2\n",
+    "\n",
     "# Counts prefix\n",
     "counts_prefix = 1e3\n",
-    "label_prefix = 'Mcounts/s'\n",
-    "\n",
+    "label_prefix = 'kcounts/s'\n",
+    "counts = reader/counts_prefix # np.array of float values of the counts\n",
     "\n",
     "xlim_min = 0\n",
     "xlim_max = 200\n",
@@ -1769,22 +1862,7 @@
     "ytick_label = np.arange(ytick_min,ytick_max+1,step=ytick_labelstep)\n",
     "\n",
     "colormap_min = np.min(counts)*colorbar_min/100\n",
-    "colormap_max = np.max(counts)*colorbar_max/100\n",
-    "\n",
-    "counts = reader/counts_prefix # np.array of float values of the counts\n",
-    "\n",
-    "plt.figure(figsize=(18, 18))\n",
-    "plt.imshow(counts, cmap='inferno', vmin = colormap_min, vmax = colormap_max)\n",
-    "plt.colorbar(label='Fluorescence (' + label_prefix + ')')\n",
-    "\n",
-    "plt.xticks(np.arange(xlim_min, xlim_max+1, step=xtick_step), xtick_label)\n",
-    "plt.xlabel('X position (\\u03bcm)')\n",
-    "plt.xlim(xlim_min,xlim_max)\n",
-    "\n",
-    "\n",
-    "plt.yticks(np.arange(ylim_min, ylim_max+1, step=ytick_step), ytick_label) \n",
-    "plt.ylabel('Y position (\\u03bcm)')\n",
-    "plt.ylim(ylim_min,ylim_max)"
+    "colormap_max = np.max(counts)*colorbar_max/100"
    ]
   },
   {
@@ -1793,12 +1871,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "\n",
+    "#np.flip(counts) np.rot90(counts) to turn the image\n",
+    "#cmap = 'viridis', 'plasma', 'inferno', 'magma', 'cividis'...\n",
+    "plt.imshow(counts, cmap='inferno', vmin = colormap_min, vmax = colormap_max) \n",
+    "plt.colorbar(fraction=0.046, pad=0.04, label='Fluorescence (' + label_prefix + ')') #Check colorbar positioning\n",
+    "\n",
+    "plt.xticks(np.arange(xlim_min, xlim_max+1, step=xtick_step), xtick_label)\n",
+    "plt.xlabel('X position (\\u03bcm)')\n",
+    "plt.xlim(xlim_min,xlim_max)\n",
+    "\n",
+    "\n",
+    "plt.yticks(np.arange(ylim_min, ylim_max+1, step=ytick_step), ytick_label) \n",
+    "plt.ylabel('Y position (\\u03bcm)')\n",
+    "plt.ylim(ylim_min,ylim_max)\n",
+    "\n",
+    "# plt.savefig(\"test.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Check the script\n",
+    "\n",
     "res_max = np.max(counts)\n",
     "res_min = np.min(counts)\n",
     "\n",
     "print(res_max, res_min)\n",
     "counts = reader.tolist()\n",
-    "resolution = 100\n",
+    "resolution = 200\n",
     "\n",
     "plt.figure(figsize=(12, 10))\n",
     "plt.contour(counts, resolution, cmap='inferno')\n",
@@ -1858,7 +1963,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "259.767px"
    },
    "toc_section_display": true,
    "toc_window_display": true
